typescript/checker/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration3_es5.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration3_es5.ts:4:12
  |
4 | function f(await = await) {
  |            ^^^^^

